# yaddy

./: .behaverc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: check_formatting.yml  functional_tets.yml  lint.yml  security.yml  type_hinting.yml  unit_tests.yml
tests/acceptance/: environment.py
tests/acceptance/features/: entity.feature  value.feature
tests/acceptance/steps/: given_there_is_a_subclass.py  then_is_set.py  then_serialized.py  then_valid_representation.py  there_is_a_subclass.py  utils.py  when_initialize_entity.py
tests/unit/: domain_object.py  test_entity.py  test_value.py
yaddy/: __init__.py  domain_object.py  entity.py  value.py
