[tool.poetry]
name = "yaddy"
version = "0.1.0"
description = "Yet Another Domain (Driven) Development librarY for Python"
authors = ["S. Guliaev <dev.sagul@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
