[tool.poetry]
name = "yaddy"
version = "0.1.0"
description = "Yet Another Domain (Driven) Development librarY for Python"
authors = ["S. Guliaev <dev.sagul@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
pytest = "^6.2.3"
isort = "^5.8.0"
black = "^20.8b1"
mypy = "^0.812"
pylint = "^2.7.4"
bandit = "^1.7.0"
pytest-cov = "^2.11.1"
pre-commit = "^2.12.0"

[tool.poetry.scripts]
unit = 'pytest:console_main'
accept = 'behave.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
